# Framework

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check_style.yml
cmake/: FrameworkSetup.cmake
code/framework/: CMakeLists.txt
code/framework/src/graphics/: renderer.cpp  renderer.h  types.h
code/framework/src/gui/: clipboard.cpp  clipboard.h  manager.cpp  manager.h  sdk.cpp  sdk.h  view.cpp  view.h
code/framework/src/gui/backend/: view_d3d11.cpp  view_d3d11.h
code/framework/src/http/: webserver.cpp
code/framework/src/integrations/client/: instance.cpp
code/framework/src/integrations/server/: instance.cpp  instance.h
code/framework/src/integrations/server/scripting/builtins/: entity.h
code/framework/src/integrations/server/scripting/builtins/node/: entity.h
code/framework/src/launcher/: project.cpp
code/framework/src/networking/: network_peer.cpp  network_peer.h
code/framework/src/networking/messages/: client_handshake.h  messages.h
code/framework/src/networking/rpc/: rpc.h
code/framework/src/scripting/: client_engine.cpp  client_engine.h  engine.cpp  engine.h  events.cpp  module.cpp  module.h  server_engine.cpp  server_engine.h  shared.h
code/framework/src/scripting/builtins/: color_rgb.h  color_rgba.h  console.h  quaternion.h  vector_2.h  vector_3.h
code/framework/src/services/: masterlist.cpp  masterlist.h
code/framework/src/utils/: command_listener.h  interpolator.h  job_system.cpp  job_system.h
code/framework/src/utils/hooking/: hook_function.h  hooking_patterns.h
code/framework/src/utils/states/: machine.cpp  machine.h  state.h
code/framework/src/world/: client.cpp  client.h  engine.cpp  server.cpp
code/framework/src/world/modules/: base.hpp  modules_impl.cpp
code/framework/src/world/types/: player.hpp  streaming.hpp
code/tests/: framework_ut.cpp
code/tests/modules/: scripting_module_ut.h  state_machine_ut.h
scripts/: check_style_ci.sh
vendors/: CMakeLists.txt
vendors/curl/: README.md
vendors/curl/lib/: libcurl.lib
vendors/flecs/: flecs.h
vendors/flecs/include/: flecs.h
vendors/imgui/: CMakeLists.txt
vendors/lua-5.4.4/: CMakeLists.txt
vendors/nodejs/: CMakeLists.txt
vendors/openssl/: CMakeLists.txt  dummy.cpp
vendors/openssl/lib/: libcrypto.lib  libssl.lib
vendors/sentry/: CMakeLists.txt  README.md
vendors/sentry/lib/darwin_arm64/: libsentry.dylib
vendors/sentry/lib/darwin_arm64/libsentry.dylib.dSYM/Contents/Resources/DWARF/: libsentry.dylib
vendors/sentry/lib/darwin_arm64/libsentry.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libsentry.dylib.yml
vendors/sentry/lib/win_32/: crashpad_client.lib  crashpad_compat.lib  crashpad_getopt.lib  crashpad_handler_lib.lib  crashpad_tools.lib  crashpad_zlib.lib  mini_chromium.lib  sentry.lib
vendors/sentry/lib/win_64/: crashpad_client.lib  crashpad_compat.lib  crashpad_getopt.lib  crashpad_handler_lib.lib  crashpad_tools.lib  crashpad_zlib.lib  mini_chromium.lib  sentry.lib
vendors/steamworks/lib/win32/: fw_steam_api.lib
vendors/steamworks/lib/win64/: fw_steam_api64.lib
